# markview-pulse-type-r

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  build.ps1  eslint.config.js  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/design/: local-image-embedding.md
e2e/helpers/: app.ts  fixtures.ts
e2e/specs/: fr00-open.e2e.ts  fr01-preview.e2e.ts  fr02-watch.e2e.ts  fr03-diff.e2e.ts  fr04-tabs.e2e.ts  fr08-theme.e2e.ts  fr15-cjk-emphasis.e2e.ts
src/: main.ts  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: cli.rs  file.rs  image.rs  mod.rs  watcher.rs
src-tauri/src/watcher/: mod.rs
src/core/: frontMatter.ts  markdown.ts  print.ts
src/ui/: contextMenu.ts  imageLoader.ts  mermaidRenderer.ts  overflowMenu.ts  preview.ts  statusBar.ts  tabBar.ts  toolbar.ts
tests/core/: contentWidth.test.ts  diffCost.test.ts  diffDom.test.ts  diffEngine.test.ts  documentStats.test.ts  dropPaths.test.ts  fileClient.test.ts  frontMatter.test.ts  imageSrc.test.ts  lcs.test.ts  markdown.test.ts  print.test.ts  scrollState.test.ts  sourceLines.test.ts  tabStore.test.ts  tableDiff.test.ts  themeController.test.ts  viewMode.test.ts  zoomLevel.test.ts
tests/perf/: diff.bench.ts  fixtures.ts  render.bench.ts  tableDiff.bench.ts
(+34 files in other folders)
